--- a/codeCamp/landingPage/styles.css
+++ b/codeCamp/landingPage/styles.css
@@ -4,6 +4,8 @@ body {
   text-align: center;
 }
 
+/* header style  */
+
 #header {
   display: flex;
   position: fixed;
@@ -17,7 +19,6 @@ body {
   min-height: 75px;
   justify-content: space-around;
   align-items: center;
-
 }
 
 .headerBox {
@@ -33,7 +34,6 @@ body {
   height: auto;
   margin: 0px;
   float: left;
-  
 }
 
 .logoBox {
@@ -49,8 +49,9 @@ body {
   align-items: center;
   padding-bottom: 10px;
   margin: 0px;
-  
 }
+
+/* nav-bar in header style*/
 
 #nav-bar {
   margin-top: 0px;
@@ -63,7 +64,7 @@ a {
 
 .nav-link {
   margin: 0px 10px;
-  
+
   text-align: end;
 }
 
@@ -78,10 +79,11 @@ li {
   padding: 0px;
 }
 
+/* form style */
+
 form {
   margin-top: 100px;
   padding: 20px;
-  
 }
 #buttonInput {
   padding: 0 20px;
@@ -102,36 +104,48 @@ form {
   margin-bottom: 10px;
 }
 
+/* section style */
+
 section {
   margin-top: 50px;
   border: solid black 3px;
   display: flex;
   flex-flow: column;
-  width: 20vw;
+  align-items: center; 
+  gap: 1.5em;
   
 }
 
 .featuresBox {
   border: black solid 3px;
-  display: flex;
-  flex-basis: auto;
+  width: 50%;
+ 
+  
 }
+
+
+/* video */
 
 iframe {
   margin-top: 50px;
   border: solid black 3px;
 }
 
+/* products styles */
+
 .container {
   margin-top: 50px;
   border: solid black 3px;
   display: flex;
+  justify-content: center;
 }
 
 .box {
   flex: auto;
   border: solid black 3px;
 }
+
+/* footer */
 
 footer {
   margin-top: 50px;
