backing up project after finishing the second part, still needs final touches

--- a/OUP/style.css
+++ b/OUP/style.css
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  font-family: sans-serif;
+  font-family: "Roboto", "Montserrat", sans-serif;
 }
 
 /* Стилизиране на header елемента */
@@ -44,42 +44,78 @@ nav > ul > li > a {
   padding: 0 10px;
 }
 
+/* Стилизиране hero елемента */
+
+/* Задаване на основен марджин на секциите */
+
 section {
   margin-left: 10px;
-  margin-left: 10px;
+  margin-right: 10px;
 }
-
-/* Стилизиране на образа и h1 елемента */
 h2 {
   margin-bottom: 0;
 }
-.imgage {
+
+/* Hero елемента е <div> */
+
+.hero {
   display: flex;
   justify-content: center;
   gap: 8rem;
   margin-bottom: 37px;
   margin-top: 28px;
 }
+
+img {
+  max-width: 50%;
+  height: 50%;
+}
+
 span {
   font-style: italic;
 }
 
-.next-to-picture {
+.heroText {
   margin-right: 10px;
   font-size: 1.5rem;
   line-height: 37px;
 }
 
+/* Стилизиране на секция "Автобиография"*/
+
 p.columns {
   margin-top: 28px;
   line-height: 1.8rem;
+  font-family: "Montserrat";
+}
+.columns {
+  column-count: 3;
+  column-gap: 37px;
+}
+
+/* Стилизиране на листата (.listOfAchievements е клас на секцията в която се помещава листата)*/
+
+.listOfAchievements {
+  margin-top: 28px;
+}
+
+li {
+  font-size: 1.1rem;
+  line-height: 2.2rem;
+  padding: 0.8rem;
 }
 
 /* Стилизиране на таблицата */
 
+.tableOfAwards {
+  margin-top: 37px;
+  margin-bottom: 37px;
+}
+
 table {
   border-collapse: collapse;
   width: 100%;
+  margin-bottom: 37px;
 }
 
 thead {
@@ -102,7 +138,16 @@ th:first-child,
 td:first-child {
   text-align: center;
 }
-.columns {
-  column-count: 2;
-  column-gap: 20px;
+/* Стилизиране на секцията съдържаща Javascript */
+.subscribe {
+  margin-top: 28px;
+  margin-bottom: 37px;
+}
+.button {
+  margin-top: 10px;
+  margin-left: 2rem;
+}
+
+footer {
+  margin-top: 2rem;
 }
